# python-sdk

./: .gitignore  DEV.md  README.md  Readme.md  pyproject.toml  setup.py  test.sh
.github/workflows/: release.yaml
musicai/: __init__.py
musicai_sdk/: __init__.py  client.py  process_folder.py  utils.py
tests/: README.md  conftest.py  test_client.py
tests/docker/: Dockerfile.test  docker-compose.test.yml
