[tool.poetry]
name = "musicai-sdk"
version = "1.0.0"
description = "Python sdk for music.ai"
authors = ["Music.ai Support <support@music.ai>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
